wxc/include/ewxw/wxc_glue.h



/* wxConfigBase */
TClassDef(wxConfigBase)
TClass(wxConfigBase) wxConfigBase_Create(  );

void       wxConfigBase_Delete( TSelf(wxConfigBase) _obj );

TBool      wxConfigBase_DeleteAll( TSelf(wxConfigBase) _obj );

TBool      wxConfigBase_DeleteEntry( TSelf(wxConfigBase) _obj, TStringVoid key, TBoolInt bDeleteGroupIfEmpty );

TBool      wxConfigBase_DeleteGroup( TSelf(wxConfigBase) _obj, TStringVoid key );

TBool      wxConfigBase_Exists( TSelf(wxConfigBase) _obj, TStringVoid strName );

TStringLen wxConfigBase_ExpandEnvVars( TSelf(wxConfigBase) _obj, TStringVoid str, TStringOutVoid _buf );

TBool      wxConfigBase_Flush( TSelf(wxConfigBase) _obj, TBool bCurrentOnly );

TStringLen wxConfigBase_GetAppName( TSelf(wxConfigBase) _obj, TStringOutVoid _buf );

int        wxConfigBase_GetEntryType( TSelf(wxConfigBase) _obj, TStringVoid name );

TClass(wxString) wxConfigBase_GetFirstEntry( TSelf(wxConfigBase) _obj, void* lIndex );

TClass(wxString) wxConfigBase_GetFirstGroup( TSelf(wxConfigBase) _obj, void* lIndex );

TClass(wxString) wxConfigBase_GetNextEntry( TSelf(wxConfigBase) _obj, void* lIndex);

TClass(wxString) wxConfigBase_GetNextGroup( TSelf(wxConfigBase) _obj, void* lIndex);

int        wxConfigBase_GetNumberOfEntries( TSelf(wxConfigBase) _obj, TBoolInt bRecursive );

int        wxConfigBase_GetNumberOfGroups( TSelf(wxConfigBase) _obj, TBoolInt bRecursive );

TStringLen wxConfigBase_GetPath( TSelf(wxConfigBase) _obj, TStringOutVoid _buf );

int        wxConfigBase_GetStyle( TSelf(wxConfigBase) _obj );

TStringLen wxConfigBase_GetVendorName( TSelf(wxConfigBase) _obj, TStringOutVoid _buf );

TBool      wxConfigBase_HasEntry( TSelf(wxConfigBase) _obj, TStringVoid strName );

TBool      wxConfigBase_HasGroup( TSelf(wxConfigBase) _obj, TStringVoid strName );

TBool      wxConfigBase_IsExpandingEnvVars( TSelf(wxConfigBase) _obj );

TBool      wxConfigBase_IsRecordingDefaults( TSelf(wxConfigBase) _obj );

TBoolInt   wxConfigBase_ReadBool( TSelf(wxConfigBase) _obj, TStringVoid key, TBoolInt defVal );

double     wxConfigBase_ReadDouble( TSelf(wxConfigBase) _obj, TStringVoid key, double defVal );

int        wxConfigBase_ReadInteger( TSelf(wxConfigBase) _obj, TStringVoid key, int defVal );

TClass(wxString) wxConfigBase_ReadString( TSelf(wxConfigBase) _obj, TStringVoid key, TStringVoid defVal );

TBoolInt   wxConfigBase_RenameEntry( TSelf(wxConfigBase) _obj, TStringVoid oldName, TStringVoid newName );

TBoolInt   wxConfigBase_RenameGroup( TSelf(wxConfigBase) _obj, TStringVoid oldName, TStringVoid newName );

void       wxConfigBase_SetAppName( TSelf(wxConfigBase) _obj, TStringVoid appName );

void       wxConfigBase_SetExpandEnvVars( TSelf(wxConfigBase) _obj, TBoolInt bDoIt );

void       wxConfigBase_SetPath( TSelf(wxConfigBase) _obj, TStringVoid strPath );

void       wxConfigBase_SetRecordDefaults( TSelf(wxConfigBase) _obj, TBoolInt bDoIt );

void       wxConfigBase_SetStyle( TSelf(wxConfigBase) _obj, int style );

void       wxConfigBase_SetVendorName( TSelf(wxConfigBase) _obj, TStringVoid vendorName );

TBoolInt   wxConfigBase_WriteBool( TSelf(wxConfigBase) _obj, TStringVoid key, TBoolInt value );

TBoolInt   wxConfigBase_WriteDouble( TSelf(wxConfigBase) _obj, TStringVoid key, double value );

TBoolInt   wxConfigBase_WriteInteger( TSelf(wxConfigBase) _obj, TStringVoid key, int value );

TBoolInt   wxConfigBase_WriteString( TSelf(wxConfigBase) _obj, TStringVoid key, TStringVoid value );